--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="resume-item">
               <h4>2022.12 ~ 2023.02 중앙노동위원회 위원노사마루 검색엔진 서버 구축</h4>
               <p style="font-family: 'BM Dohyeon'">중앙노동위원회 사무관급 공무원들이 사용하는 노무처리 시스템</p>
-              <h5 style="font-family: 'BM Hanna Pro'">노무사법 관련 판례 검색 시스템 구축 / 색인, 검색 서버를 분리하고 쿼리 최적화 및 인덱싱 사용</h5>
+              <h5 style="font-family: 'BM Hanna Pro'">노무사법 관련 판례 검색 시스템 구축 / 색인, 검색 서버 분리하여 구축</h5>
             </div>
             <div class="resume-item">
               <h4>2022.08 ~ 2022.12 법제처 정부입법 검색서버 Migration 작업</h4>
