--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <ul style="text-align: center">
           <li><a href="#hero" class="nav-link scrollto active"><span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><span>About</span></a></li>
-          <li><a href="#Career" class="nav-link scrollto"><span>Career</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><span>Tech Skills</span></a></li>
           <li><a href="#project" class="nav-link scrollto"><span>Project</span></a></li>
           <li><a href="#Experience" class="nav-link scrollto"><span>Experience</span></a></li>
+          <li><a href="#Career" class="nav-link scrollto"><span>Career</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><span>Education</span></a></li>
           <li><a href="#Blog" class="nav-link scrollto"><span>Blog</span></a></li>
           <li><a href="#Contact" class="nav-link scrollto"><span>Contact</span></a></li>
@@ -101,73 +101,50 @@
               <b style="font-family: 'SendBox font medium'">이제 꿈의 크기를 줄이고 근본적으로 사람들에게 도움이 되는 사람이 되고자 합니다. 뼈아픈 경험을 통해 앞으로 더욱 정진할 수 있는 동기가 되었습니다.</b>
 
             </p>
+
+            <div class="container py-5" data-aos="fade-right">
+              <div class="row justify-content-center">
+                <div class="col-md-3">
+                  <div class="card text-center p-4">
+                    <img src="assets/img/server.png" alt="Server icon" class="mb-3">
+                    <p class="mb-3">Server</p>
+                    <div class="icon-bar bg-primary w-100"></div>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card text-center p-4">
+                    <img src="assets/img/spring.png" alt="Django icon" class="mb-3">
+                    <p class="mb-3">Spring</p>
+                    <div class="icon-bar bg-danger w-100"></div>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card text-center p-4">
+                    <img src="assets/img/java.png" alt="Python icon" class="mb-3">
+                    <p class="mb-3">Java</p>
+                    <div class="icon-bar bg-warning w-100"></div>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card text-center p-4">
+                    <img src="assets/img/web.png" alt="Web icon" class="mb-3">
+                    <p class="mb-3">Web</p>
+                    <div class="icon-bar bg-info w-100"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="banner" data-aos="fade-left">
+              <h1>조금 늦은 만큼 더 열심히 하고 있습니다.</h1>
+              <p class="button-style">앞으로 뛰어난 서버 개발자가 되고 싶습니다!</p>
+            </div>
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
 
-
-    <!-- ======= Resume Section ======= -->
-    <section id="Career" class="resume">
-      <div class="container">
-        <div class="section-title">
-          <h2 style="font-family: 'SendBox font bold'" data-aos="fade-up">CAREER</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-12" data-aos="fade-up">
-            <h3 class="resume-title">SNS 컨텐츠 채널운영</h3>
-            <div class="resume-item pb-0">
-              <h4>2023.09 ~ 2024.03</h4>
-              <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명 이상을 달성했습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">컨텐츠는 스타일링 쇼츠, 동물쇼츠, 역사, 흥미로운 정보 등등 다양한 주제로 채널을 만들어 운영했습니다.</h5>
-            </div>
-
-            <h3 class="resume-title">스타일컨설팅 사업운영</h3>
-            <div class="resume-item">
-              <h4>2023.06 ~ 2023.09</h4>
-              <p style="font-family: 'BM Dohyeon'">3개월동안 고객 자가에 직접 방문하여 헤어스타일링, 메이크업, 패션코디, 피부관리 등 남성스타일에 중요한 요소를 코칭하였습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">3명의 고객을 유치하였고 과도한 광고비용과 경쟁도 심화로 사업을 전환하였습니다.</h5>
-            </div>
-
-            <h3 class="resume-title">데이터 엔지니어</h3>
-            <div class="resume-item">
-              <h4>2023.02 ~ 2023.05</h4>
-              <p style="font-family: 'BM Dohyeon'">브랜디, 하이버, 서울스토어에서 발생한 고객의 impression 데이터를 ETL 작업 후 ML모델이 학습할 수 있도록 데이터 파이프라인을 관리했습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">브랜디의 경영악화로 3개월 시용기간 이후 브랜디를 나왔습니다.</h5>
-            </div>
-
-            <h3 class="resume-title">검색엔진 엔지니어</h3>
-            <div class="resume-item">
-              <h4>2022.12 ~ 2023.02 중앙노동위원회 위원노사마루 검색엔진 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">중앙노동위원회 사무관급 공무원들이 사용하는 노무처리 시스템</p>
-              <h5 style="font-family: 'BM Hanna Pro'">노무사법 관련 판례 검색 시스템 구축 / 색인, 검색 서버 분리하여 구축</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.08 ~ 2022.12 법제처 정부입법 검색서버 Migration 작업</h4>
-              <p style="font-family: 'BM Dohyeon'">법제처 정부입법 홈페이지에서 사용되는 검색엔진 서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">AS IS 서버에 있는 데이터 색인설정, 전처리 코드, SQL, 검색정책 등 TO BE 서버로 이관</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.04 ~ 2022.08 삼성증권 사내 결재문서 시스템 검색 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">삼성증권에서 사용되는 결재시스템 Anyflow의 검색엔진 서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">삼성증권 내부 결재문서 2001년 ~ 2022년까지 총 1000만건 이상의 결재문서 검색 시스템 구축</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.01 ~ 2022.04 법제처 국가법령정보센터 검색엔진 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">국가법령정보센터에서 사용되는 국가법령, 자치법규, 행정규칙 검색서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">분당 평균 50회 이상의 검색요청이 발생하는 국가법령정보센터 검색 서버 구축</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2021.09 ~ 2021.12 인사이드정보 인턴기간</h4>
-              <p style="font-family: 'BM Dohyeon'">검색엔진 Xten, Priavte Cloud Nutanix, MSTR 등 회사 솔루션 학습</p>
-              <h5 style="font-family: 'BM Hanna Pro'">Java로 구현된 검색엔진 수집기 코드분석, Cloud의 기본개념(VPC, IAM Role, 클러스터 개념), Olab 솔루션 사용(Metric을 사용한 리포트 작성) </h5>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
 
 
     <!-- ======= Skills Section ======= -->
@@ -310,7 +287,7 @@
                     <div class="project-content">
                       <h3 style="color: yellowgreen">크립토 시그널</h3>
                       <div>상대강도지수 RSI가 30이거나 70일 때 알람을 주는 웹 애플리케이션 시장분석을 위해 크립토 뉴스를 크롤링하고, 오피니언마이닝으로 긍정뉴스, 부정뉴스를 확인할 수 있게한다.</div>
-                      <a href="https://www.youtube.com/watch?v=xsCabkQBIGY" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="" class="btn btn-light btn-sm">상세보기</a>
                       <a href="https://github.com/ChoiYoungHa/CryptoSignal" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
@@ -457,6 +434,66 @@
       </div>
     </section>
 
+    <!-- ======= Resume Section ======= -->
+    <section id="Career" class="resume">
+      <div class="container">
+        <div class="section-title">
+          <h2 style="font-family: 'SendBox font bold'" data-aos="fade-up">CAREER</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-12" data-aos="fade-up">
+            <h3 class="resume-title">SNS 컨텐츠 채널운영</h3>
+            <div class="resume-item pb-0">
+              <h4>2023.09 ~ 2024.03</h4>
+              <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명 이상을 달성했습니다.</p>
+              <h5 style="font-family: 'BM Hanna Pro'">컨텐츠는 스타일링 쇼츠, 동물쇼츠, 역사, 흥미로운 정보 등등 다양한 주제로 채널을 만들어 운영했습니다.</h5>
+            </div>
+
+            <h3 class="resume-title">스타일컨설팅 사업운영</h3>
+            <div class="resume-item">
+              <h4>2023.06 ~ 2023.09</h4>
+              <p style="font-family: 'BM Dohyeon'">3개월동안 고객 자가에 직접 방문하여 헤어스타일링, 메이크업, 패션코디, 피부관리 등 남성스타일에 중요한 요소를 코칭하였습니다.</p>
+              <h5 style="font-family: 'BM Hanna Pro'">3명의 고객을 유치하였고 과도한 광고비용과 경쟁도 심화로 사업을 전환하였습니다.</h5>
+            </div>
+
+            <h3 class="resume-title">데이터 엔지니어</h3>
+            <div class="resume-item">
+              <h4>2023.02 ~ 2023.05</h4>
+              <p style="font-family: 'BM Dohyeon'">브랜디, 하이버, 서울스토어에서 발생한 고객의 impression 데이터를 ETL 작업 후 ML모델이 학습할 수 있도록 데이터 파이프라인을 관리했습니다.</p>
+              <h5 style="font-family: 'BM Hanna Pro'">브랜디의 경영악화로 3개월 시용기간 이후 브랜디를 나왔습니다.</h5>
+            </div>
+
+            <h3 class="resume-title">검색엔진 엔지니어</h3>
+            <div class="resume-item">
+              <h4>2022.12 ~ 2023.02 중앙노동위원회 위원노사마루 검색엔진 서버 구축</h4>
+              <p style="font-family: 'BM Dohyeon'">중앙노동위원회 사무관급 공무원들이 사용하는 노무처리 시스템</p>
+              <h5 style="font-family: 'BM Hanna Pro'">노무법 관련 판례 검색 시스템 구축 / 색인, 검색 서버를 분리하고 쿼리 최적화 및 인덱싱 사용</h5>
+            </div>
+            <div class="resume-item">
+              <h4>2022.08 ~ 2022.12 법제처 정부입법 검색서버 Migration 작업</h4>
+              <p style="font-family: 'BM Dohyeon'">법제처 정부입법 홈페이지에서 사용되는 검색엔진 서버</p>
+              <h5 style="font-family: 'BM Hanna Pro'">AS IS 서버에 있는 데이터 색인설정, 전처리 코드, SQL, 검색정책 등 TO BE 서버로 이관</h5>
+            </div>
+            <div class="resume-item">
+              <h4>2022.04 ~ 2022.08 삼성증권 사내 결재문서 시스템 검색 서버 구축</h4>
+              <p style="font-family: 'BM Dohyeon'">삼성증권에서 사용되는 결재시스템 Anyflow의 검색엔진 서버</p>
+              <h5 style="font-family: 'BM Hanna Pro'">삼성증권 내부 결재문서 2001년 ~ 2022년까지 총 1000만건 이상의 결재문서 검색 시스템 구축</h5>
+            </div>
+            <div class="resume-item">
+              <h4>2022.01 ~ 2022.04 법제처 국가법령정보센터 검색엔진 서버 구축</h4>
+              <p style="font-family: 'BM Dohyeon'">국가법령정보센터에서 사용되는 국가법령, 자치법규, 행정규칙 검색서버</p>
+              <h5 style="font-family: 'BM Hanna Pro'">분당 평균 50회 이상의 검색요청이 발생하는 국가법령정보센터 검색 서버 구축</h5>
+            </div>
+            <div class="resume-item">
+              <h4>2021.09 ~ 2021.12 인사이드정보 인턴기간</h4>
+              <p style="font-family: 'BM Dohyeon'">검색엔진 Xten, Priavte Cloud Nutanix, MSTR 등 회사 솔루션 학습</p>
+              <h5 style="font-family: 'BM Hanna Pro'">Java로 구현된 검색엔진 수집기 코드분석, Cloud의 기본개념(VPC, IAM Role, 클러스터 개념), Olab 솔루션 사용(Metric을 사용한 리포트 작성) </h5>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="Education" class="portfolio section-bg" data-aos="fade-up">
