--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"중고 신입 개발자"</h1>
+          <h1 style="font-family: 'SendBox font bold'">"개발자로서 정진 하겠습니다."</h1>
         </div>
 
         <div class="row">
@@ -87,17 +87,16 @@
             <p style="font-family: 'SendBox font light'; font-size: 18px">"안녕하세요. 1년동안 사업에 도전하며 깨달은 것이 많은 개발자 최영하입니다."</p>
             <p class="fst-alic" style="font-family: 'SendBox font light'">
               저는 1년6개월 동안 검색엔진 엔지니어로 일했었습니다. <b style="font-family: 'SendBox font medium'">법제처 국가법령정보센터, 삼성증권, 중앙노동위원회 등 대용량 트래픽 및 데이터를 다뤄본 경험으로
-              브랜디라는 회사에 데이터 엔지니어 포지션으로 이직</b> 했었습니다. 이른 경력에 이직한 이유는 검색엔진이 자사 솔루션이기 때문입니다. 오픈소스와 같은 범용적인 기술을 사용하지 않아서 시간이 지나
-            커리어 성장에 한계를 느껴 이직을 결심 했습니다. 특정 고객사에서는 엘라스틱 서치를 사용했지만, 보조적으로 Aggregation 같은 데이터분석만을 위해 조금
-              사용했던 정도입니다.</p>
+              브랜디라는 회사에 데이터 엔지니어 포지션으로 이직</b> 했었습니다. 이른 경력에 이직한 이유는 검색엔진이 자사 솔루션이기 때문입니다. 오픈소스와 같은 범용적인 기술을 사용하지 않고, 순수 Java, C, C++로 개발을 했기에
+            커리어 성장에 한계를 느껴 이직을 결심 했습니다.</p>
 
             <p style="font-family: 'SendBox font light';">
               하지만 브랜디는 에이블리, 지그재그에게 밀려 1년평균 20만이던 MAU가 5만 ~ 10만으로 급격하게 떨어지면서 매월 적자를 기록하고 있었습니다. 때문에 대규모 구조조정을 피할 수 없게 되었고
-              3개월 시용기간이었던 저는 명단에 올라 브랜디를 나오게 되었습니다.
+              3개월 시용기간이었던 저는 브랜디를 나오게 되었습니다.
             </p>
             <p style="font-family: 'SendBox font light';">
-              그 이후 1년동안 스타일컨설팅 사업, 컨텐츠 사업을 시작했습니다. 실업급여를 받는동안 사업에 도전해보고 싶었기 때문입니다.
-              스타일컨설팅은 고객 3명 유치, 컨텐츠 사업은 유튜브 구독자 6천명을 모았고 1년동안 100만원을 벌었습니다. 1년이라는 시간동안 충분히 사업 실력을 확인해 봤습니다.
+              이후 1년동안 스타일컨설팅 사업, 컨텐츠 사업을 시작했습니다.
+              스타일컨설팅은 고객 3명 유치, 컨텐츠 사업은 팔로워 1만명 이상 모았지만 사업을 지속할 만큼의 수익은 발생하지 않았습니다. 1년이라는 시간동안 충분히 도전했다고 생각합니다.
               <b style="font-family: 'SendBox font medium'">이제 꿈의 크기를 줄이고 근본적으로 사람들에게 도움이 되는 사람이 되고자 합니다. 뼈아픈 경험을 통해 앞으로 더욱 정진할 수 있는 동기가 되었습니다.</b>
 
             </p>
@@ -136,8 +135,8 @@
             </div>
 
             <div class="banner" data-aos="fade-left">
-              <h1>조금 늦은 만큼 더 열심히 하고 있습니다.</h1>
-              <p class="button-style">앞으로 뛰어난 서버 개발자가 되고 싶습니다!</p>
+              <h1>매일 12시간씩 더 열심히 하고 있습니다.</h1>
+              <p class="button-style">아침 7시에 일어나 밤 12시까지 밥먹는 시간 빼고 스터디카페에서 공부만 하고 있습니다.</p>
             </div>
           </div>
         </div>
@@ -158,17 +157,14 @@
 
         <div class="col-md-12" data-aos="fade-up">
           <p class="mb-5 mt-3" style="font-family: 'SendBox font light'">개발의 처음 시작은 Java로 시작했습니다. <b style="font-family: 'SendBox font medium'">덕분에 객체지향 프로그래밍에서 중요한 캡슐화, 추상화, 상속, 다형성 같은 개념</b>을
-          깊이 있게 이해할 수 있었습니다. 이러한 기본적인 개념들을 바탕으로 컴퓨터 사이언스(데이터베이스, 운영체제, 네트워크, 자료구조 등)를 공부하고 현재는 Spring 프레임워크 서버 개발자를 준비하고 있습니다.
-          간단한 웹 서비스를 혼자서 개발할 수 있습니다. 자바 기반의 검색엔진 서버 운영경험은 기술적인 면뿐만 아니라 문제해결력을 키우는데도 큰 도움이 됐습니다. <b style="font-family: 'SendBox font medium'">예를들어, 실시간 문제를 해결하기 위해 데이터 구조와 알고리즘을 적용하는 방법을 배웠고,
-          이는 대용량 트래픽 환경에서 빠른 응답 시간을 보장할 수 있었습니다.</b> 사용자로부터 실시간 데이터를 받고, 인기 검색어 Top 5를 실시간으로 제공해야하는 상황에서 Hashmap을 사용했습니다. 검색어를 키로, 검색량을 값으로 사용합니다.
-          알고리즘 적용으로 Top 5 검색어를 추출하기 위해 최소 힙(Min-Heap) 구조를 사용하는 우선순위 큐를 적용할 수 있습니다. 큐는 검색어를 검색량에 따라 자동으로 정렬해주고, 상위 5개의 키워드만 유지하여 새로운 데이터가 추가될 때마다
-          가장 작은 값을 제거합니다. <b style="font-family: 'SendBox font medium'">이렇게 Java로 알고리즘 공부를하고, 스프링 프로젝트를 했으며, 검색엔진 서버운영도 Java를 사용했습니다.</b></p>
+          깊이 있게 이해할 수 있었습니다. 이러한 기본적인 개념들을 바탕으로 컴퓨터 사이언스(데이터베이스, 운영체제, 네트워크, 자료구조 등)를 공부하고  현재는 웹 서비스를 혼자서 개발할 수 있습니다. <br><br>더불어 자바 기반의 검색엔진 개발 경험은 기술적인 면뿐만 아니라 문제해결력을 키우는데도 큰 도움이 됐습니다. <b style="font-family: 'SendBox font medium'">예를들어, 실시간 문제를 해결하기 위해 자료구조와 알고리즘을 적용하는 방법을 배웠고,
+          이는 빠른 응답 시간을 보장할 수 있었습니다.</b> 예를들어 사용자로부터 실시간 데이터를 받고, 인기 검색어 Top 5를 실시간으로 제공해야하는 상황에서 Hashmap, 우선순위 큐를 적용하였습니다. 큐는 검색어를 검색량에 따라 자동으로 정렬해주고, 상위 5개의 키워드만 유지하여 새로운 데이터가 추가될 때마다
+          가장 작은 값을 제거합니다.<br><br><b style="font-family: 'SendBox font medium'">Java 자료구조 및 알고리즘 응용능력, Spring Framework, JPA, Security 등을 응용한 프로젝트 경험, 검색엔진 서버 운영경험은 안정적인 Backend 운영과 API 반응속도 개선에 큰 도움이 될 것입니다.</b></p>
         </div>
         <div class="col-md-12" data-aos="fade-up">
-          <p class="mt-3 mb-5" style="font-family: 'SendBox font light'">
-          진행한 프로젝트 배포는 AWS EC2를 통해 배포하였고, Docker 및 Jenkins를 이용하여 CI/CD 환경을 구축하였습니다. 보안 및 동시접속 처리를 대비하여
-            Nginx를 프록시 서버로 사용하였고 SSL 인증서를 받았습니다. 그 이외에 AWS 인프라 구축 경험은 데이터 엔지니어로 일 했을 때 보안을 위해 Secret Manager를 Boto3 라이브러리로
-            사용 하였으며, S3에 데이터레이크 구축, MWAA로 트러블 슈팅관리, Glue 대용량 데이터 처리, Lambda 함수처리 등 AWS 기반의 인프라를 관리한 경험이 있습니다.
+          <p class="mt-2 mb-5" style="font-family: 'SendBox font light'">
+          AWS EC2, RDS, S3, Route53, Glue, Lambda, EMR, MWAA, Cloudwhatch, Secretmanager 등을 이용하여 인프라를 구축한 경험이 있습니다. 대규모 트래픽에 대비한 설계로 Nginx를 프록시 서버로 사용했으며
+            Docker, Jenkins를 이용해서 CI/CD를 구축할 수 있습니다.
           </p>
         </div>
 
@@ -186,7 +182,7 @@
             <!-- JavaScript -->
             <div class="skill-item">
               <h4>JavaScript</h4>
-              <p>스프링 MVC 패턴으로 4개의 프로젝트를 진행하면서 비동기 요청이 자주 필요했습니다. Jquery를 사용하다가 최근에는 ES6 문법을 배워 Asncy await을 이용한 비동기 요청을 사용합니다.
+              <p>ES6 문법으로 Asncy await을 이용한 비동기 요청을 사용합니다.
               그외 Form Validation, Dom 조작 등 JavaScript로 구현할 수 있습니다.</p>
               <div class="progress">
                 <div class="progress-bar" style="width: 50%; background-color: #FFFF00">50%</div>
@@ -228,7 +224,7 @@
               <p>Jira를 이용하여 이슈를 관리하고 결재 받았으며, confluence를 통해 개발 문서를 공유하였습니다. Slack 메신저로 커뮤니케이션하고,
               IntelliJ, Visual Studio Code 등의 IDE를 사용하여 개발하였습니다.</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-aws" style="width: 50%;">50%</div>
+                <div class="progress-bar progress-bar-aws" style="width: 50%; background-color: #2ea499">50%</div>
               </div>
             </div>
           </div>
@@ -425,7 +421,7 @@
                   <i class="fa-solid fa-brain"></i>
                 </div>
                 <h5 class="card-title mt-3">GPT 활용능력</h5>
-                <p class="card-text">GPTS Action, GPT Assistants 등을 활용하여 GPT끼리 협력시켜 결과물을 만들어냅니다.</p>
+                <p class="card-text">GPT에 문서학습, Rest API 요청, instruction 적용으로 맞춤형 GPT를 만들 수 있습니다.</p>
               </div>
             </div>
           </div>
@@ -446,13 +442,13 @@
             <div class="resume-item pb-0">
               <h4>2023.09 ~ 2024.03</h4>
               <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명 이상을 달성했습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">컨텐츠는 스타일링 쇼츠, 동물쇼츠, 역사, 흥미로운 정보 등등 다양한 주제로 채널을 만들어 운영했습니다.</h5>
+              <h5 style="font-family: 'BM Hanna Pro'">팔로워를 1만명 이상 모았지만 사업을 지속하기 어려웠습니다.</h5>
             </div>
 
             <h3 class="resume-title">스타일컨설팅 사업운영</h3>
             <div class="resume-item">
               <h4>2023.06 ~ 2023.09</h4>
-              <p style="font-family: 'BM Dohyeon'">3개월동안 고객 자가에 직접 방문하여 헤어스타일링, 메이크업, 패션코디, 피부관리 등 남성스타일에 중요한 요소를 코칭하였습니다.</p>
+              <p style="font-family: 'BM Dohyeon'">3개월동안 남성들의 헤어스타일링, 메이크업, 패션코디, 피부관리 등 남성스타일에 중요한 요소를 코칭하였습니다.</p>
               <h5 style="font-family: 'BM Hanna Pro'">3명의 고객을 유치하였고 과도한 광고비용과 경쟁도 심화로 사업을 전환하였습니다.</h5>
             </div>
 
