update: portfolio url

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                       <h3 style="color: orangered">Creative Youtuber</h3>
                       <div>유튜브가 어려운 사람들을 위한 유튜브 시작 가이드 웹 애플리케이션 벤치마킹 영상을 찾아주고 영상에 들어갈 참고자료까지 찾아준다.</div>
                       <a href="https://creativeyoutuber.store" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://github.com/ChoiYoungHa/Portfolio" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
+                      <a href="https://github.com/ChoiYoungHa/creative-youtuber.git" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
                 </div>
