--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/style-custom.css" rel="stylesheet">
-  <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
 
@@ -79,27 +80,26 @@
 
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"개발자로서 정진 하겠습니다."</h1>
+          <h1 style="font-family: 'SendBox font bold'">"데이터 중심 백엔드 개발자"</h1>
         </div>
 
         <div class="row">
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <p style="font-family: 'SendBox font light'; font-size: 18px">"안녕하세요. 1년동안 사업에 도전하며 깨달은 것이 많은 개발자 최영하입니다."</p>
-            <p class="fst-alic" style="font-family: 'SendBox font light'">
-              저는 1년6개월 동안 검색엔진 엔지니어로 일했었습니다. <b style="font-family: 'SendBox font medium'">법제처 국가법령정보센터, 삼성증권, 중앙노동위원회 등 대용량 트래픽 및 데이터를 다뤄본 경험으로
-              브랜디라는 회사에 데이터 엔지니어 포지션으로 이직</b> 했었습니다. 이른 경력에 이직한 이유는 검색엔진이 자사 솔루션이기 때문입니다. 오픈소스와 같은 범용적인 기술을 사용하지 않고, 순수 Java, C, C++로 개발을 했기에
-            커리어 성장에 한계를 느껴 이직을 결심 했습니다.</p>
+            <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년정도의 개발 공백기가
+              있었습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 구조조정을 겪은 후 사업에 도전했기 때문입니다.<br>
+              사업을 경험하며 가치는 개인이 혼자 창출할 수 있지만 함께 하는 것이 더욱 지속가능하고 성장할 수 있는
+              환경이라는 것을 깨달았습니다. <br>유튜브 구독자 6000명, 틱톡 6000명, 페이스북 2400명, 인스타그램 1200명의
+              팔로워를 모았지만, 이는 누구나 할 수 있는 일이기에<br> 제가 잘할 수 있는 일을 하기로 결심했습니다.<br><br>
 
-            <p style="font-family: 'SendBox font light';">
-              하지만 브랜디는 에이블리, 지그재그에게 밀려 1년평균 20만이던 MAU가 5만 ~ 10만으로 급격하게 떨어지면서 매월 적자를 기록하고 있었습니다. 때문에 대규모 구조조정을 피할 수 없게 되었고
-              3개월 시용기간이었던 저는 브랜디를 나오게 되었습니다.
-            </p>
-            <p style="font-family: 'SendBox font light';">
-              이후 1년동안 스타일컨설팅 사업, 컨텐츠 사업을 시작했습니다.
-              스타일컨설팅은 고객 3명 유치, 컨텐츠 사업은 팔로워 1만명 이상 모았지만 사업을 지속할 만큼의 수익은 발생하지 않았습니다. 1년이라는 시간동안 충분히 도전했다고 생각합니다.
-              <b style="font-family: 'SendBox font medium'">이제 꿈의 크기를 줄이고 근본적으로 사람들에게 도움이 되는 사람이 되고자 합니다. 뼈아픈 경험을 통해 앞으로 더욱 정진할 수 있는 동기가 되었습니다.</b>
+              <b style="font-family: 'SendBox font medium'">개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하였습니다.</b><br>
+              저는 검색엔진, 데이터 엔지니어로 일하며 Spring MVC, Java, Python, Linux, SQL은<br>
+              이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고
+              웹 프로젝트를 완성하였습니다.<br><br> 이후  NettyFramework와 Spring WebFlux를 공부하였습니다.<br>
+              Spring WebClient로 통신서버를 만들고, 실시간 모니터링 시스템을 구현하였습니다.<br>
+              데이터 파이프라인은 Spring Boot → Netty WebClient → Kafka → Logstash → OpenSeach 로
+              구성하였으며<br> AWS에서 VPC 피어링, SecretManager, IAM으로 환경을 구성 하였습니다.<br>
+              각각의 EC2는 Docker-compose로 Container를 관리하고 있습니다.</p>
 
-            </p>
 
             <div class="container py-5" data-aos="fade-right">
               <div class="row justify-content-center">
@@ -133,11 +133,6 @@
                 </div>
               </div>
             </div>
-
-            <div class="banner" data-aos="fade-left">
-              <h1>매일 12시간씩 더 열심히 하고 있습니다.</h1>
-              <p class="button-style">아침 7시에 일어나 밤 12시까지 밥먹는 시간 빼고 스터디카페에서 공부만 하고 있습니다.</p>
-            </div>
           </div>
         </div>
 
@@ -156,78 +151,89 @@
         </div>
 
         <div class="col-md-12" data-aos="fade-up">
-          <p class="mb-5 mt-3" style="font-family: 'SendBox font light'">개발의 처음 시작은 Java로 시작했습니다. <b style="font-family: 'SendBox font medium'">덕분에 객체지향 프로그래밍에서 중요한 캡슐화, 추상화, 상속, 다형성 같은 개념</b>을
-          깊이 있게 이해할 수 있었습니다. 이러한 기본적인 개념들을 바탕으로 컴퓨터 사이언스(데이터베이스, 운영체제, 네트워크, 자료구조 등)를 공부하고  현재는 웹 서비스를 혼자서 개발할 수 있습니다. <br><br>더불어 자바 기반의 검색엔진 개발 경험은 기술적인 면뿐만 아니라 문제해결력을 키우는데도 큰 도움이 됐습니다. <b style="font-family: 'SendBox font medium'">예를들어, 실시간 문제를 해결하기 위해 자료구조와 알고리즘을 적용하는 방법을 배웠고,
-          이는 빠른 응답 시간을 보장할 수 있었습니다.</b> 예를들어 사용자로부터 실시간 데이터를 받고, 인기 검색어 Top 5를 실시간으로 제공해야하는 상황에서 Hashmap, 우선순위 큐를 적용하였습니다. 큐는 검색어를 검색량에 따라 자동으로 정렬해주고, 상위 5개의 키워드만 유지하여 새로운 데이터가 추가될 때마다
-          가장 작은 값을 제거합니다.<br><br><b style="font-family: 'SendBox font medium'">Java 자료구조 및 알고리즘 응용능력, Spring Framework, JPA, Security 등을 응용한 프로젝트 경험, 검색엔진 서버 운영경험은 안정적인 Backend 운영과 API 반응속도 개선에 큰 도움이 될 것입니다.</b></p>
-        </div>
-        <div class="col-md-12" data-aos="fade-up">
-          <p class="mt-2 mb-5" style="font-family: 'SendBox font light'">
-          AWS EC2, RDS, S3, Route53, Glue, Lambda, EMR, MWAA, Cloudwhatch, Secretmanager 등을 이용하여 인프라를 구축한 경험이 있습니다. 대규모 트래픽에 대비한 설계로 Nginx를 프록시 서버로 사용했으며
-            Docker, Jenkins를 이용해서 CI/CD를 구축할 수 있습니다.
+          <p class="mt-3" style="font-family: 'SendBox font light'">저는 한국폴리텍대학교I 강서캠퍼스 데이터분석과를 졸업했습니다.
+            폴리텍대학교 특성상 시간표는 매일 8교시로 꽉 차 있었습니다.<br>덕분에 4년동안 배울 컴퓨터과학 과목을
+            2년이내로 다 배울 수 있었습니다.<br> 잊은 것도 있고 부족하지만 <b style="font-family: 'SendBox font medium'">네트워크, 데이터베이스, 운영체제, 알고리즘,
+              자료구조, 컴퓨터구조, 프로젝트 실습 등 과목에서 전체학점 4점을 받았습니다.</b><br> 오후 5시에 강의가 끝나도 뜻이
+            맞는 학과 동기들끼리 남아서 과제학습, 알고리즘 풀이, Spring MVC 등을 밤 10시까지 공부하였습니다.<br>
+            그 결과 성실성을 인정받아 교수님의 추천으로 조기취업을 했습니다.</p>
+
+          <p style="font-family: 'SendBox font light'">
+            프로젝트 실습과목에서 Spring MVC, Mybatis, BootStrap5, Flask, Redis, MongoDB 등을
+            공부하여 프로젝트 3개를 진행했으며<br><b style="font-family: 'SendBox font medium'">혼자서 처음부터 끝까지 CRUD, 페이징 처리, 채팅기능, 인증,
+            세션, 등을 구현할 수 있습니다.</b>
           </p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-left">
-            <!-- Java -->
-            <div class="skill-item">
-              <h4>Java</h4>
-              <p>자바를 기반으로 자료구조 및 알고리즘을 공부하였습니다. 자바 언어의 기본적인 문법에 대해 알고 있으며, 자바를 통해 스프링 프로젝트 및 검색엔진 개발을 했습니다.</p>
-              <div class="progress">
-                <div class="progress-bar" style="width: 60%; background-color: orangered">60%</div>
-              </div>
-            </div>
+        <div class="col-md-12" data-aos="fade-up">
+          <p class="mt-2 mb-3" style="font-family: 'SendBox font light'">
+            검색엔진, 데이터 엔지니어로 1년9개월동안 일했기 때문에 <b style="font-family: 'SendBox font medium'">Java, Python, SQL, Linux 등에 익숙</b>합니다.<br>
+            검색엔진 엔지니어 주업무는 고객사의 검색엔진을 유지보수하고, 데이터 수집기를 개발하는 일을 하였습니다.<br>
+            데이터 엔지니어의 주업무는 브랜디, 하이버, 서울스토어에서 발생하는 고객행동데이터를 ETL하여<br> 개인 상품추천
+            모델의 학습 데이터로 제공하는 일을 하였습니다.
+          </p>
+        </div>
 
-            <!-- JavaScript -->
-            <div class="skill-item">
-              <h4>JavaScript</h4>
-              <p>ES6 문법으로 Asncy await을 이용한 비동기 요청을 사용합니다.
-              그외 Form Validation, Dom 조작 등 JavaScript로 구현할 수 있습니다.</p>
-              <div class="progress">
-                <div class="progress-bar" style="width: 50%; background-color: #FFFF00">50%</div>
-              </div>
-            </div>
+        <div class="col-md-12" data-aos="fade-up">
+          <p class="mt-" style="font-family: 'SendBox font light'">
+            현재는 <b style="font-family: 'SendBox font medium'">Spring 핵심원리(ID, IOC, Solid, AOP), Spring JPA Data, Spring Security, JWT 등을 학습하고,
+            프로젝트를 완료했습니다.</b><br> 빠르게 기능을 구현하고 잘 모르는 부분은 기술부채로 남겨두었습니다.<br>이후 기술부채를 공부할 때는
+            코드로 친숙해진 상태이기에 더욱 재밌게 공부했습니다.
+          </p>
 
-            <!-- CSS3 -->
-            <div class="skill-item">
-              <h4>Github</h4>
-              <p>깃허브로 팀프로젝트 및 개인프로젝트를 진행하였으며 git cmd에 익숙합니다. 더불어 github webhook을 통해 젠킨스를 연동하여 CI/CD를 구축하였습니다.</p>
-              <div class="progress">
-                <div class="progress-bar" style="width: 40%; background-color: gray">40%</div>
-              </div>
+          <p class="mb-5" style="font-family: 'SendBox font light'">
+            최근에는 실시간 데이터 스트리밍을 구현해보고 싶어서 Netty, Spring WebFlux를 공부하였습니다.<br>
+            Spring WebClient로 통신 서버를 만들어 Kafka producer에게 데이터를 스트리밍합니다.<br>
+            더불어 백프레셔 관리(reactor)를 통해 카프카와 웹소켓 사이의 메시지 처리속도를 조절하여 안정성을 더했습니다.<br>
+            <b style="font-family: 'SendBox font medium'">이를 바탕으로 Spring Boot → Netty WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
+            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되는 기능을 구현했습니다.</b>
+          </p>
+        </div>
+
+
+
+        <div class="bg-gray-900 text-white row">
+        <div class="container mx-auto p-8">
+          <h1 class="text-2xl font-bold mb-4">보유 스킬</h1>
+          <div class="grid grid-cols-2 gap-4">
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">Back-End</h2>
+              <p>Java, Spring Framework, Spring Boot, Spring Security, Spring WebFlux, RESTful API(JSON), JPA, Kafka, Logstash</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">Front-End</h2>
+              <p>HTML5, CSS3, JavaScript(ES6), BootStrap5, JSP, Thymeleaf</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">DevOps</h2>
+              <p>Docker, DockerCompose, Jenkins</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">DB</h2>
+              <p>Oracle, MySQL, MariaDB, H2, Redis, MongoDB</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">AWS</h2>
+              <p>EC2, RDS, Route53, S3, Lambda, EMR, Glue, ElasticCache</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">Server</h2>
+              <p>Netty, Apache Tomcat, Nginx</p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">Tools</h2>
+              <p class="flex space-x-2">
+                IntelliJ, PyCharm, PostMan, VisualStudio Code, Iterm, Workbench
+              </p>
+            </div>
+            <div class="bg-white text-black p-4 rounded shadow">
+              <h2 class="text-xl font-bold mb-2">Collaboration & Document</h2>
+              <p class="flex space-x-2">
+                Git, Jira Core, Jira Confluence, Notion, Slack, Google Docs
+              </p>
             </div>
           </div>
-
-          <div class="col-lg-6" data-aos="fade-left">
-
-            <!-- Spring -->
-            <div class="skill-item">
-              <h4>Spring</h4>
-              <p>좋은 객체지향 설계를 위한 SOLID 원칙을 이해하고 있습니다. Rest API를 설계할 수 있으며 API문서를 정리할 수 있습니다. JPA를 사용하여 DB를 조작합니다. Junit으로 테스트 케이스를 작성하여 검증할 수 있고, Rest 검증은 RestAssured을 사용합니다. </p>
-              <div class="progress">
-                <div class="progress-bar" style="width: 60%; background-color: #26C281">60%</div>
-              </div>
-            </div>
-            <!-- Django -->
-            <div class="skill-item">
-              <h4>Python</h4>
-              <p>Python으로 Spark, Airflow 등 데이터엔지니어링을 경험했으며 Flask 서버를 빠르게 구축하여 필요한 기능을 Rest API로 설계 할 수 있습니다. 자바에서 지원하지 않는 라이브러리를 사용하거나 AI를 사용할 때 자주 사용합니다.</p>
-              <div class="progress">
-                <div class="progress-bar progress-bar-django" style="width: 50%;">50%</div>
-              </div>
-            </div>
-
-            <!-- ETC -->
-            <div class="skill-item">
-              <h4>ETC</h4>
-              <p>Jira를 이용하여 이슈를 관리하고 결재 받았으며, confluence를 통해 개발 문서를 공유하였습니다. Slack 메신저로 커뮤니케이션하고,
-              IntelliJ, Visual Studio Code 등의 IDE를 사용하여 개발하였습니다.</p>
-              <div class="progress">
-                <div class="progress-bar progress-bar-aws" style="width: 50%; background-color: #2ea499">50%</div>
-              </div>
-            </div>
-          </div>
+        </div>
         </div>
       </div>
     </section>
