add data engineering project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"데이터 중심 백엔드 개발자"</h1>
+          <h1 style="font-family: 'SendBox font bold'">"주니어 수준의 백엔드 개발과 데이터 엔지니어링 둘 다 가능합니다."</h1>
         </div>
 
         <div class="row">
@@ -289,7 +289,7 @@
                     <div class="project-content">
                       <h3 style="color: yellowgreen">크립토 시그널</h3>
                       <div>상대강도지수 RSI가 30이거나 70일 때 알람을 주는 웹 애플리케이션 시장분석을 위해 크립토 뉴스를 크롤링하고, 오피니언마이닝으로 긍정뉴스, 부정뉴스를 확인할 수 있게한다.</div>
-                      <a href="" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://youtu.be/xsCabkQBIGY?si=3qG61bdDCZpHK1Zo" target="_blank" class="btn btn-light btn-sm">상세보기</a>
                       <a href="https://github.com/ChoiYoungHa/CryptoSignal" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
@@ -312,30 +312,17 @@
             </div>
           </div>
 
-          <div ><h3 style="font-family: 'SendBox font bold'">비즈니스</h3></div>
+          <div ><h3 style="font-family: 'SendBox font bold'">데이터 엔지니어링</h3></div>
           <div class="container py-1" data-aos="fade-up">
             <div class="row">
               <div class="col-md-6 mb-4">
                 <div class="project-card">
-                  <img src="assets/img/스타일컨설팅1.png" alt="스타일 컨설팅" class="img-fluid" style="height: 500px; width: 500px">
+                  <img src="assets/img/dashboard.png" alt="네트워크 모니터링" class="img-fluid">
                   <div class="project-info">
                     <div class="project-content">
-                      <h3 style="color: #1967d4">남성 스타일 컨설팅 사업</h3>
-                      <div>남성들의 외모 고민을 해결해주는 스타일 컨설팅 사업을 했었습니다.</div>
-                      <a href="https://future-zydeco-6c6.notion.site/e70943f661e74441b1721648f65481d2" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- 또 다른 프로젝트 -->
-              <div class="col-md-6 mb-4">
-                <div class="project-card">
-                  <img src="assets/img/컨텐츠사업.png" alt="컨텐츠 사업" class="img-fluid" style="height: 500px; width: 500px">
-                  <div class="project-info">
-                    <div class="project-content">
-                      <h3 style="color: #d44b19">컨텐츠 사업</h3>
-                      <div>유튜브, 인스타그램, 페이스북 등 채널을 운영하며 컨텐츠를 업로드 하였습니다.</div>
-                      <a href="https://future-zydeco-6c6.notion.site/c98942451dc04916a564bb2af0b74c79?pvs=4" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <h3 style="color: #1967d4">실시간 네트워크 모니터링</h3>
+                      <div>웹 앱에서 발생한 네트워크 로그를 실시간으로 대시보드에 반영합니다.</div>
+                      <a href="https://future-zydeco-6c6.notion.site/670305a47f6846c7a7bff0e1914720ea?pvs=4" target="_blank" class="btn btn-light btn-sm">상세보기</a>
                     </div>
                   </div>
                 </div>
