--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/style-custom.css" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.tailwindcss.com" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
@@ -94,8 +94,8 @@
               <b style="font-family: 'SendBox font medium'">개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하였습니다.</b><br>
               저는 검색엔진, 데이터 엔지니어로 일하며 Spring MVC, Java, Python, Linux, SQL은<br>
               이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고
-              웹 프로젝트를 완성하였습니다.<br><br> 이후  NettyFramework와 Spring WebFlux를 공부하였습니다.<br>
-              Spring WebClient로 통신서버를 만들고, 실시간 모니터링 시스템을 구현하였습니다.<br>
+              웹 프로젝트를 완성하였습니다.<br><br>
+              완성된 프로젝트의 네트워크 실시간 모니터링을 위해 데이터 파이프라인을 구축하였습니다.<br>
               데이터 파이프라인은 Spring Boot → Netty WebClient → Kafka → Logstash → OpenSeach 로
               구성하였으며<br> AWS에서 VPC 피어링, SecretManager, IAM으로 환경을 구성 하였습니다.<br>
               각각의 EC2는 Docker-compose로 Container를 관리하고 있습니다.</p>
@@ -175,18 +175,17 @@
         </div>
 
         <div class="col-md-12" data-aos="fade-up">
-          <p class="mt-" style="font-family: 'SendBox font light'">
+          <p style="font-family: 'SendBox font light'">
             현재는 <b style="font-family: 'SendBox font medium'">Spring 핵심원리(ID, IOC, Solid, AOP), Spring JPA Data, Spring Security, JWT 등을 학습하고,
             프로젝트를 완료했습니다.</b><br> 빠르게 기능을 구현하고 잘 모르는 부분은 기술부채로 남겨두었습니다.<br>이후 기술부채를 공부할 때는
             코드로 친숙해진 상태이기에 더욱 재밌게 공부했습니다.
           </p>
 
           <p class="mb-5" style="font-family: 'SendBox font light'">
-            최근에는 실시간 데이터 스트리밍을 구현해보고 싶어서 Netty, Spring WebFlux를 공부하였습니다.<br>
+            최근에는 실시간 데이터 스트리밍을 구현해보고 싶어서 오픈서치 대시보드로 모니터링 시스템을 구현했습니다.<br>
             Spring WebClient로 통신 서버를 만들어 Kafka producer에게 데이터를 스트리밍합니다.<br>
-            더불어 백프레셔 관리(reactor)를 통해 카프카와 웹소켓 사이의 메시지 처리속도를 조절하여 안정성을 더했습니다.<br>
-            <b style="font-family: 'SendBox font medium'">이를 바탕으로 Spring Boot → Netty WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
-            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되는 기능을 구현했습니다.</b>
+            <b style="font-family: 'SendBox font medium'">Spring Boot → Netty WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
+            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되게 구현했습니다.</b>
           </p>
         </div>
 
@@ -198,7 +197,7 @@
           <div class="grid grid-cols-2 gap-4">
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Back-End</h2>
-              <p>Java, Spring Framework, Spring Boot, Spring Security, Spring WebFlux, RESTful API(JSON), JPA, Kafka, Logstash</p>
+              <p>Java, Spring Framework, Spring Boot, Spring Security, RESTful API(JSON), JPA, Kafka, Logstash</p>
             </div>
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Front-End</h2>
@@ -349,7 +348,7 @@
                 <div class="hexagon blue">
                   <i class="fas fa-lightbulb"></i>
                 </div>
-                <h5 class="card-title mt-3">유튜브 구독자 6000명 보유</h5>
+                <h5 class="card-title mt-3">동영상 제작 능력</h5>
                 <p class="card-text">채널을 운영하면서 유튜브, 페이스북, 인스타그램, 틱톡 총 팔로워는 1만명이 넘습니다.</p>
               </div>
             </div>
@@ -360,8 +359,8 @@
                 <div class="hexagon red">
                   <i class="fa-solid fa-comments"></i>
                 </div>
-                <h5 class="card-title mt-3">세일즈 능력</h5>
-                <p class="card-text">사업을 하면서 어떤 제품 / 서비스에 대한 가치를 설명하는 것에 익숙합니다.</p>
+                <h5 class="card-title mt-3">커뮤니케이션 능력</h5>
+                <p class="card-text">발표하는 것을 좋아하며 새로운 사람을 만나는 것을 좋아합니다.</p>
               </div>
             </div>
           </div>
@@ -371,56 +370,15 @@
                 <div class="hexagon yellow">
                   <i class="fa-solid fa-briefcase"></i>
                 </div>
-                <h5 class="card-title mt-3">비즈니스 이해</h5>
-                <p class="card-text">사업을 운영하며 자금관리, 마케팅 등 비즈니스에 대한 전체적인 흐름을 배울 수 있었습니다.</p>
+                <h5 class="card-title mt-3">비즈니스 관점</h5>
+                <p class="card-text">사람들이 원하는 것이 무엇인지 내가 무엇을 줄 수 있는지 자주 고민하고 기록합니다.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container mt-5">
-        <div class="row g-4">
 
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon navy">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <h5 class="card-title mt-3">검색엔진 서버 운영경험</h5>
-                <p class="card-text">대용량 데이터 및 트래픽 환경에서의 문제를 네트워크, DB, OS 지식으로 풀어낸 경험이 있습니다.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon mint">
-                  <i class="fa-solid fa-cloud"></i>
-                </div>
-                <h5 class="card-title mt-3">기초적인 데이터 엔지니어링</h5>
-                <p class="card-text">3개월동안 Airflow, Spark, Lambda, EMR 등을 이용한 클라우드 데이터 파이프라인 운영경험 </p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon violet">
-                  <i class="fa-solid fa-brain"></i>
-                </div>
-                <h5 class="card-title mt-3">GPT 활용능력</h5>
-                <p class="card-text">GPT에 문서학습, Rest API 요청, instruction 적용으로 맞춤형 GPT를 만들 수 있습니다.</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
     </section>
 
     <!-- ======= Resume Section ======= -->
@@ -435,48 +393,24 @@
             <div class="resume-item pb-0">
               <h4>2023.09 ~ 2024.03</h4>
               <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명 이상을 달성했습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">팔로워를 1만명 이상 모았지만 사업을 지속하기 어려웠습니다.</h5>
             </div>
 
             <h3 class="resume-title">스타일컨설팅 사업운영</h3>
             <div class="resume-item">
               <h4>2023.06 ~ 2023.09</h4>
               <p style="font-family: 'BM Dohyeon'">3개월동안 남성들의 헤어스타일링, 메이크업, 패션코디, 피부관리 등 남성스타일에 중요한 요소를 코칭하였습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">3명의 고객을 유치하였고 과도한 광고비용과 경쟁도 심화로 사업을 전환하였습니다.</h5>
             </div>
 
-            <h3 class="resume-title">데이터 엔지니어</h3>
+            <h3 class="resume-title">브랜디 : 데이터 엔지니어</h3>
             <div class="resume-item">
               <h4>2023.02 ~ 2023.05</h4>
               <p style="font-family: 'BM Dohyeon'">브랜디, 하이버, 서울스토어에서 발생한 고객의 impression 데이터를 ETL 작업 후 ML모델이 학습할 수 있도록 데이터 파이프라인을 관리했습니다.</p>
-              <h5 style="font-family: 'BM Hanna Pro'">브랜디의 경영악화로 3개월 시용기간 이후 브랜디를 나왔습니다.</h5>
             </div>
 
-            <h3 class="resume-title">검색엔진 엔지니어</h3>
+            <h3 class="resume-title">인사이드정보 : 검색엔진 엔지니어</h3>
             <div class="resume-item">
-              <h4>2022.12 ~ 2023.02 중앙노동위원회 위원노사마루 검색엔진 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">중앙노동위원회 사무관급 공무원들이 사용하는 노무처리 시스템</p>
-              <h5 style="font-family: 'BM Hanna Pro'">노무법 관련 판례 검색 시스템 구축 / 색인, 검색 서버를 분리하고 쿼리 최적화 및 인덱싱 사용</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.08 ~ 2022.12 법제처 정부입법 검색서버 Migration 작업</h4>
-              <p style="font-family: 'BM Dohyeon'">법제처 정부입법 홈페이지에서 사용되는 검색엔진 서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">AS IS 서버에 있는 데이터 색인설정, 전처리 코드, SQL, 검색정책 등 TO BE 서버로 이관</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.04 ~ 2022.08 삼성증권 사내 결재문서 시스템 검색 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">삼성증권에서 사용되는 결재시스템 Anyflow의 검색엔진 서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">삼성증권 내부 결재문서 2001년 ~ 2022년까지 총 1000만건 이상의 결재문서 검색 시스템 구축</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2022.01 ~ 2022.04 법제처 국가법령정보센터 검색엔진 서버 구축</h4>
-              <p style="font-family: 'BM Dohyeon'">국가법령정보센터에서 사용되는 국가법령, 자치법규, 행정규칙 검색서버</p>
-              <h5 style="font-family: 'BM Hanna Pro'">분당 평균 50회 이상의 검색요청이 발생하는 국가법령정보센터 검색 서버 구축</h5>
-            </div>
-            <div class="resume-item">
-              <h4>2021.09 ~ 2021.12 인사이드정보 인턴기간</h4>
-              <p style="font-family: 'BM Dohyeon'">검색엔진 Xten, Priavte Cloud Nutanix, MSTR 등 회사 솔루션 학습</p>
-              <h5 style="font-family: 'BM Hanna Pro'">Java로 구현된 검색엔진 수집기 코드분석, Cloud의 기본개념(VPC, IAM Role, 클러스터 개념), Olab 솔루션 사용(Metric을 사용한 리포트 작성) </h5>
+              <h4>2021.09 ~ 2023.02</h4>
+              <p style="font-family: 'BM Dohyeon'">고객사 검색엔진 유지보수(형태소 분석, 데이터 전처리, 실시간 인기검색어, 검색 알고리즘 변경 등) 및 고객사 요구사항에 따른 검색엔진 수집기 개발</p>
             </div>
           </div>
         </div>
@@ -486,80 +420,61 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="Education" class="portfolio section-bg" data-aos="fade-up">
-      <div class="container">
-
-        <div class="container mt-5">
-          <div class="section-title">
-            <h2 style="font-family: 'SendBox font bold'">EDUCATION</h2>
-          </div>
-          <div class="accordion" id="educationAccordion">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="font-family: 'Gmarket Sans'">
-                  한국폴리텍대학 강서캠퍼스 데이터분석과
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#educationAccordion">
-                <div class="accordion-body">
-                  <strong>2020.03 ~ 2022.02 | 한국폴리텍I대학 데이터분석과 졸업 - </strong> 대학교지만 1교시 ~ 8교시까지 꽉 차 있는 강의 시간표 덕분에 데이터베이스, 컴퓨터구조, 알고리즘, 운영체제 등 CS지식을 탄탄하게 쌓을 수 있었습니다. 저의 졸업학점은 평균 4점으로 학업에 열중하였으며
-                  학교가 끝나도 학과 동기들과 밤 10시까지 모여서 알고리즘, 스프링 프로젝트 등을 공부했습니다. 데이터분석과 학과동기들은 현재도 1년에 한번 꼭 모임을 가질 만큼 끈끈한 사이로 지내고 있습니다.
-                </div>
+      <div class="container mt-5">
+        <div class="section-title">
+          <h2 style="font-family: 'SendBox font bold'">EDUCATION</h2>
+        </div>
+        <div>
+          <div class="max-w-2xl mx-auto bg-white p-6 rounded-lg shadow-md">
+            <div class="border-b border-gray-300 pb-4 mb-4">
+              <button class="collapsible w-full text-left text-lg font-medium text-gray-700 py-2 px-4 bg-gray-100 rounded-md focus:outline-none">
+                한국폴리텍대학 강서캠퍼스 데이터분석과
+                <span class="float-right"><i class="fas fa-chevron-down"></i></span>
+              </button>
+              <div class="collapsible-content hidden mt-2 pl-4 text-gray-600">
+                <strong>2020.03 ~ 2022.02 | 한국폴리텍I대학 데이터분석과 졸업 - </strong> 대학교지만 1교시 ~ 8교시까지 꽉 차 있는 강의 시간표 덕분에 데이터베이스, 컴퓨터구조, 알고리즘, 운영체제 등 CS지식을 탄탄하게 쌓을 수 있었습니다. 저의 졸업학점은 평균 4점으로 학업에 열중하였으며
+                학교가 끝나도 학과 동기들과 밤 10시까지 모여서 알고리즘, 스프링 MVC 등을 공부했습니다. 데이터분석과 학과동기들은 현재도 1년에 한번 꼭 모임을 가질 만큼 끈끈한 사이로 지내고 있습니다.
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="font-family: 'Gmarket Sans'">
-                  네이버 부스트코스 CS50 코칭스터디 2기
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#educationAccordion">
-                <div class="accordion-body">
-                  <strong>2021.01 ~ 2021.02 | CS50 코칭스터디 2기 리드부스터 - </strong> 네이버 커넥트재단에서 운영하는 컴퓨터과학 강좌를 들으며 매주 학습과제를 팀원들과 함께 풀어가는 단기 교육 프로그램을 이수하였습니다.
-                  각 조에는 담당 멘토님이 있으셔서 잘 모르는 것들은 질문하여 답변 받을 수 있었습니다. 저는 리드부스터 역할로 지원하였으며 매주 과제 제출 및 팀원들의 역할 조율을 담당했습니다.
-                </div>
+            <div class="border-b border-gray-300 pb-4 mb-4">
+              <button class="collapsible w-full text-left text-lg font-medium text-gray-700 py-2 px-4 bg-gray-100 rounded-md focus:outline-none">
+                네이버 부스트코스 CS50 코딩스터디 2기
+                <span class="float-right"><i class="fas fa-chevron-down"></i></span>
+              </button>
+              <div class="collapsible-content hidden mt-2 pl-4 text-gray-600">
+                <strong>2021.01 ~ 2021.02 | CS50 코칭스터디 2기 리드부스터 - </strong> 네이버 커넥트재단에서 운영하는 컴퓨터과학 강좌를 들으며 매주 학습과제를 팀원들과 함께 풀어가는 단기 교육 프로그램을 이수하였습니다.
+                각 조에는 담당 멘토님이 있으셔서 잘 모르는 것들은 질문하여 답변 받을 수 있었습니다. 저는 리드부스터 역할로 지원하였으며 매주 과제 제출 및 팀원들의 학습과제 조율을 담당했습니다.
               </div>
             </div>
-            <!-- Add New Accordion Item for KNU University -->
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="font-family: 'Gmarket Sans'">
-                  해남공업고등학교 전기전자과
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#educationAccordion">
-                <div class="accordion-body">
-                  <strong>2014.03 ~ 2017.02 | 해남공업고등학교 졸업 - </strong>고등학교 시절은 저의 성격에 대해서 가장 많은 부분을 완성한 시기입니다. 친구들과 허물없이 지내며 이야기하고, 서로의 미래에 관해 이야기하였습니다. 한국전력공사 특채에 지원하겠다는 목표아래
-                  자격증도 4개를 취득했습니다. 학교성적도 2등급대를 유지하였으며 선생님 및 학우들과 원만한 교우 관계를 형성하여 기억에 남는 학교생활을 했습니다.
-                </div>
+            <div class="border-b border-gray-300 pb-4 mb-4">
+              <button class="collapsible w-full text-left text-lg font-medium text-gray-700 py-2 px-4 bg-gray-100 rounded-md focus:outline-none">
+                해남공업고등학교 전기전자과
+                <span class="float-right"><i class="fas fa-chevron-down"></i></span>
+              </button>
+              <div class="collapsible-content hidden mt-2 pl-4 text-gray-600">
+                <strong>2014.03 ~ 2017.02 | 해남공업고등학교 졸업 - </strong>고등학교 시절은 저의 성격에 대해서 가장 많은 부분을 완성한 시기입니다. 친구들과 허물없이 지내며 이야기하고, 서로의 미래에 관해 이야기하였습니다. 한국전력공사 특채에 지원하겠다는 목표아래
+                자격증도 4개를 취득했습니다. 학교성적도 2등급대를 유지하였으며 선생님 및 학우들과 원만한 교우 관계를 형성하여 기억에 남는 학교생활을 했습니다.
               </div>
             </div>
-
-            <!-- Add New Accordion Item for Young-Shin High School -->
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingFour">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="font-family: 'Gmarket Sans'">
-                  Certification List
-                </button>
-              </h2>
-              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#educationAccordion">
-                <div class="accordion-body">
-                  <strong>자격증 목록</strong>
-                  <ul>
-                    <li style="font-family: 'Gmarket Sans'">2021.06 - 과학기술정보통신부 정보처리산업기사 / 자격번호 : 21211070594F</li>
-                    <li style="font-family: 'Gmarket Sans'">2021.06 - 한국데이터산업진흥원 SQLD 개발자 / 자격번호 : SQLD-041004286</li>
-                    <li style="font-family: 'Gmarket Sans'">2016.09 - 한국산업인력공단 전자부품장착기능사 / 자격번호 : 16404200061S</li>
-                    <li style="font-family: 'Gmarket Sans'">2016.06 - 한국산업인력공단 전기기능사 / 자격번호 : 16403200743E</li>
-                    <li style="font-family: 'Gmarket Sans'">2015.12 - 한국산업인력공단 전자캐드기능사 / 자격번호 : 15405200388S</li>
-                    <li style="font-family: 'Gmarket Sans'">2015.02 - 한국산업인력공단 전자계산기기능사 / 자격번호 : 15401200095G</li>
-                  </ul>
-                </div>
+            <div class="border-b border-gray-300 pb-4 mb-4">
+              <button class="collapsible w-full text-left text-lg font-medium text-gray-700 py-2 px-4 bg-gray-100 rounded-md focus:outline-none">
+                Certification List
+                <span class="float-right"><i class="fas fa-chevron-down"></i></span>
+              </button>
+              <div class="collapsible-content hidden mt-2 pl-4 text-gray-600">
+                <strong>자격증 목록</strong>
+                <ul>
+                  <li style="font-family: 'Gmarket Sans'">2021.06 - 과학기술정보통신부 정보처리산업기사 / 자격번호 : 21211070594F</li>
+                  <li style="font-family: 'Gmarket Sans'">2021.06 - 한국데이터산업진흥원 SQLD 개발자 / 자격번호 : SQLD-041004286</li>
+                  <li style="font-family: 'Gmarket Sans'">2016.09 - 한국산업인력공단 전자부품장착기능사 / 자격번호 : 16404200061S</li>
+                  <li style="font-family: 'Gmarket Sans'">2016.06 - 한국산업인력공단 전기기능사 / 자격번호 : 16403200743E</li>
+                  <li style="font-family: 'Gmarket Sans'">2015.12 - 한국산업인력공단 전자캐드기능사 / 자격번호 : 15405200388S</li>
+                  <li style="font-family: 'Gmarket Sans'">2015.02 - 한국산업인력공단 전자계산기기능사 / 자격번호 : 15401200095G</li>
+                </ul>
               </div>
             </div>
-
-            <!-- More accordion items can be added here -->
           </div>
         </div>
-
 
         </div>
     </section><!-- End Portfolio Section -->
@@ -659,6 +574,17 @@
   <script src="https://kit.fontawesome.com/a013a9a8f0.js" crossorigin="anonymous"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.collapsible').forEach(button => {
+        button.addEventListener('click', () => {
+          const content = button.nextElementSibling;
+          content.classList.toggle('hidden');
+        });
+      });
+    });
+  </script>
 
 
 </body>
