--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="assets/img/profile-cowork.jpeg" alt="" class="img-fluid rounded-circle" style="height: 150px; width: 150px">
         <h1 class="text-light"><a href="index.html" style="color: black">YOUNGHA CHOI</a></h1>
         <div class="mt-3 text-center" style="font-family: 'SendBox font light'">
-          <a href="#" style="font-size: 15px">ServerDeveloper</a><span style="color: black; font-size: 15px">&Spring</span>
+          <a href="#" style="font-size: 15px">ServerDeveloper</a><span style="color: black; font-size: 15px"><a>&Spring</a></span>
         </div>
       </div>
 
@@ -80,25 +80,21 @@
 
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"주니어 수준의 백엔드 개발과 데이터 엔지니어링 둘 다 가능합니다."</h1>
+          <h1 style="font-family: 'SendBox font bold'">"다시 개발자를 선택한 이유"</h1>
         </div>
 
         <div class="row">
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년정도의 개발 공백기가
               있었습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 구조조정을 겪은 후 사업에 도전했기 때문입니다.<br>
-              사업을 경험하며 가치는 개인이 혼자 창출할 수 있지만 함께 하는 것이 더욱 지속가능하고 성장할 수 있는
+              사업을 경험하며 개인이 혼자 가치를 창출 할 수도 있지만 함께 하는 것이 더욱 지속가능하고 성장할 수 있는
               환경이라는 것을 깨달았습니다. <br>유튜브 구독자 6000명, 틱톡 6000명, 페이스북 2400명, 인스타그램 1200명의
               팔로워를 모았지만, 이는 누구나 할 수 있는 일이기에<br> 제가 잘할 수 있는 일을 하기로 결심했습니다.<br><br>
 
               <b style="font-family: 'SendBox font medium'">개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하였습니다.</b><br>
-              저는 검색엔진, 데이터 엔지니어로 일하며 Spring MVC, Java, Python, Linux, SQL은<br>
+              저는 개인 프로젝트, 검색엔진, 데이터 엔지니어 등의 경험으로 Spring MVC, Java, Python, Linux, SQL은<br>
               이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고
               웹 프로젝트를 완성하였습니다.<br><br>
-              완성된 프로젝트의 네트워크 실시간 모니터링을 위해 데이터 파이프라인을 구축하였습니다.<br>
-              데이터 파이프라인은 Spring Boot → Netty WebClient → Kafka → Logstash → OpenSeach 로
-              구성하였으며<br> AWS에서 VPC 피어링, SecretManager, IAM으로 환경을 구성 하였습니다.<br>
-              각각의 EC2는 Docker-compose로 Container를 관리하고 있습니다.</p>
 
 
             <div class="container py-5" data-aos="fade-right">
@@ -165,27 +161,17 @@
           </p>
         </div>
 
-        <div class="col-md-12" data-aos="fade-up">
-          <p class="mt-2 mb-3" style="font-family: 'SendBox font light'">
-            검색엔진, 데이터 엔지니어로 1년9개월동안 일했기 때문에 <b style="font-family: 'SendBox font medium'">Java, Python, SQL, Linux 등에 익숙</b>합니다.<br>
-            검색엔진 엔지니어 주업무는 고객사의 검색엔진을 유지보수하고, 데이터 수집기를 개발하는 일을 하였습니다.<br>
-            데이터 엔지니어의 주업무는 브랜디, 하이버, 서울스토어에서 발생하는 고객행동데이터를 ETL하여<br> 개인 상품추천
-            모델의 학습 데이터로 제공하는 일을 하였습니다.
-          </p>
-        </div>
-
-        <div class="col-md-12" data-aos="fade-up">
+        <div class="col-md-12 mt-5" data-aos="fade-up">
           <p style="font-family: 'SendBox font light'">
-            현재는 <b style="font-family: 'SendBox font medium'">Spring 핵심원리(ID, IOC, Solid, AOP), Spring JPA Data, Spring Security, JWT 등을 학습하고,
+            현재는 <b style="font-family: 'SendBox font medium'">Spring 핵심원리(DI, IOC, Solid, AOP), Spring JPA Data, Spring Security, JWT 등을 학습하고,
             프로젝트를 완료했습니다.</b><br> 빠르게 기능을 구현하고 잘 모르는 부분은 기술부채로 남겨두었습니다.<br>이후 기술부채를 공부할 때는
             코드로 친숙해진 상태이기에 더욱 재밌게 공부했습니다.
           </p>
 
           <p class="mb-5" style="font-family: 'SendBox font light'">
             최근에는 실시간 데이터 스트리밍을 구현해보고 싶어서 오픈서치 대시보드로 모니터링 시스템을 구현했습니다.<br>
-            Spring WebClient로 통신 서버를 만들어 Kafka producer에게 데이터를 스트리밍합니다.<br>
-            <b style="font-family: 'SendBox font medium'">Spring Boot → Netty WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
-            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되게 구현했습니다.</b>
+            <b style="font-family: 'SendBox font medium'">Spring Boot → WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
+            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되도록 구현했습니다.</b>
           </p>
         </div>
 
@@ -197,7 +183,7 @@
           <div class="grid grid-cols-2 gap-4">
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Back-End</h2>
-              <p>Java, Spring Framework, Spring Boot, Spring Security, RESTful API(JSON), JPA, Kafka, Logstash</p>
+              <p>Spring Framework, Spring Boot, Spring Security, JWT, JPA, Kafka, Logstash, OpenSearch</p>
             </div>
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Front-End</h2>
@@ -213,7 +199,7 @@
             </div>
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">AWS</h2>
-              <p>EC2, RDS, Route53, S3, Lambda, EMR, Glue, ElasticCache</p>
+              <p>EC2, RDS, Route53, S3, Lambda, EMR, Glue</p>
             </div>
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Server</h2>
@@ -410,7 +396,7 @@
             <h3 class="resume-title">인사이드정보 : 검색엔진 엔지니어</h3>
             <div class="resume-item">
               <h4>2021.09 ~ 2023.02</h4>
-              <p style="font-family: 'BM Dohyeon'">고객사 검색엔진 유지보수(형태소 분석, 데이터 전처리, 실시간 인기검색어, 검색 알고리즘 변경 등) 및 고객사 요구사항에 따른 검색엔진 수집기 개발</p>
+              <p style="font-family: 'BM Dohyeon'">JAVA, C, ShellScript, ElasticSearch 등을 사용하여 검색엔진 개발과 이슈를 해결하고, 고객사의 도메인에 알맞는 형태소 분석, 검색 알고리즘을 적용하여 검색성능을 최적화 했습니다.</p>
             </div>
           </div>
         </div>
@@ -491,7 +477,7 @@
               <div class="card-horizontal">
                 <div class="card-body">
                   <h5 class="card-title">개발 블로그</h5>
-                  <p class="card-text">예전에 프로그래밍을 처음 공부했을 때 만든 블로그입니다. 현재도 가끔씩 포스팅하여 정보를 공유하고 있습니다.</p>
+                  <p class="card-text">백엔드 개발을하면서 겪은 문제, 배운점, 기술적 이해를 문서화하고 있습니다.</p>
                   <p><small class="text-muted">Since 2021.01 | 개발 블로그 운영</small></p>
                   <a href="https://weight-devlog.tistory.com/" target="_blank"><div class="btn btn-primary">방문하기</div></a>
                 </div>
@@ -502,7 +488,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">GITHUB</h5>
-                <p class="card-text">개인 프로젝트 및 팀 프로젝트 소스코드를 공유하며, 코드를 통해 공부한 내용을 Repo로 만들어 관리합니다.</p>
+                <p class="card-text">프로젝트와 공부한 내용을 Repo로 만들어 관리합니다.</p>
                 <p><small class="text-muted">Since 2020.03 | 깃허브 계정 생성</small></p>
                 <a href="https://github.com/ChoiYoungHa" target="_blank"><div class="btn btn-primary">방문하기</div></a>
               </div>
