--- a/index.html
+++ b/index.html
@@ -80,55 +80,27 @@
 
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"다시 개발자를 선택한 이유"</h1>
+          <h1 style="font-family: 'SendBox font bold'">"제가 정말 잘 하는 일은 개발입니다."</h1>
         </div>
 
         <div class="row">
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년정도의 개발 공백기가
-              있었습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 구조조정을 겪은 후 사업에 도전했기 때문입니다.<br>
-              사업을 경험하며 개인이 혼자 가치를 창출 할 수도 있지만 함께 하는 것이 더욱 지속가능하고 성장할 수 있는
-              환경이라는 것을 깨달았습니다. <br>유튜브 구독자 6000명, 틱톡 6000명, 페이스북 2400명, 인스타그램 1200명의
-              팔로워를 모았지만, 이는 누구나 할 수 있는 일이기에<br> 제가 잘할 수 있는 일을 하기로 결심했습니다.<br><br>
+            <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년에 가까운 개발 공백기가
+              있습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 경영악화로 구조조정을 겪은 후 충격에 방황했기 때문입니다.<br>
+             평소에 하고 싶었던 잘 못 꾸미는 남자들을 코칭해주는 스타일 컨설팅, 유튜브 컨텐츠 제작에 도전 하였습니다.
+              1년에 가까운 시간동안 도전 했지만 유튜브 수익은 재사용컨텐츠 사유로 정지 당했고, 스타일컨설팅 사업도 잘 되지 않아 사업을 정리하게 됐습니다.<br><br>
+              이 경험을 통해 배운 점은 결정은 자신에게 불리한 정보까지 다 수집하고 오랫동안 고민한 후 결정해야 한다는 것입니다.
+              마음을 정리한 후 저의 과거를 되짚어 봤습니다. 밤새우며 에러를 찾고 개발일정에 쫓겨도 잘 마무리 했을 때 책임을 다 했다는 것에 뿌듯함과 보람을 느꼈습니다.
+              삼성증권 부장님과 농담을 주고 받으며 프로젝트 마감일까지 함께 고생했던 일, 장애가 발생했으니 지원을 요청하는 메일이 한꺼번에 5통이 와도 마무리 후
+              수고했다는 팀장님의 한마디면 즐거웠던 일이 생각났습니다. 그때 깨달았습니다. 내가 정말 잘 하는 일은 개발이구나.
 
-              <b style="font-family: 'SendBox font medium'">개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하였습니다.</b><br>
+              <br><br></p>
+
+              <b style="font-family: 'SendBox font medium'">지금은 개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하고 있습니다.</b><br>
               저는 개인 프로젝트, 검색엔진, 데이터 엔지니어 등의 경험으로 Spring MVC, Java, Python, Linux, SQL은<br>
-              이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고
-              웹 프로젝트를 완성하였습니다.<br><br>
+              이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고 해당 기술스택을 사용한
+              프로젝트를 완성하였습니다.<br><br>
 
-
-            <div class="container py-5" data-aos="fade-right">
-              <div class="row justify-content-center">
-                <div class="col-md-3">
-                  <div class="card text-center p-4">
-                    <img src="assets/img/server.png" alt="Server icon" class="mb-3">
-                    <p class="mb-3">Server</p>
-                    <div class="icon-bar bg-primary w-100"></div>
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <div class="card text-center p-4">
-                    <img src="assets/img/spring.png" alt="Django icon" class="mb-3">
-                    <p class="mb-3">Spring</p>
-                    <div class="icon-bar bg-danger w-100"></div>
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <div class="card text-center p-4">
-                    <img src="assets/img/java.png" alt="Python icon" class="mb-3">
-                    <p class="mb-3">Java</p>
-                    <div class="icon-bar bg-warning w-100"></div>
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <div class="card text-center p-4">
-                    <img src="assets/img/web.png" alt="Web icon" class="mb-3">
-                    <p class="mb-3">Web</p>
-                    <div class="icon-bar bg-info w-100"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
 
