--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-10 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년에 가까운 개발 공백기가
-              있습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 경영악화로 구조조정을 겪은 후 충격에 방황했기 때문입니다.<br>
+              있습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 경영악화로 구조조정을 겪은 후 충격에 방황했기 때문입니다.
              평소에 하고 싶었던 잘 못 꾸미는 남자들을 코칭해주는 스타일 컨설팅, 유튜브 컨텐츠 제작에 도전 하였습니다.
-              1년에 가까운 시간동안 도전 했지만 유튜브 수익은 재사용컨텐츠 사유로 정지 당했고, 스타일컨설팅 사업도 잘 되지 않아 사업을 정리하게 됐습니다.<br><br>
-              이 경험을 통해 배운 점은 결정은 자신에게 불리한 정보까지 다 수집하고 오랫동안 고민한 후 결정해야 한다는 것입니다.
-              마음을 정리한 후 저의 과거를 되짚어 봤습니다. 밤새우며 에러를 찾고 개발일정에 쫓겨도 잘 마무리 했을 때 책임을 다 했다는 것에 뿌듯함과 보람을 느꼈습니다.
+              1년에 가까운 시간동안 도전 했지만 유튜브는 노출율이 줄어 들었고, 스타일컨설팅 사업도 잘 되지 않아 사업을 정리하게 됐습니다.<br><br>
+
+              이 경험을 통해 자신에게 불리한 정보까지 다 수집하고 오랫동안 고민한 후 객관적인 관점에서 결정해야 한다는 것을 배웠습니다.
+              마음을 정리한 후 저의 과거를 되짚어 봤습니다. 야근과 주말출근을 하며 문제를 해결하고, 개발일정에 쫓겨도 일을 잘 마무리 했을 때 책임을 다 한 것에 뿌듯함과 보람을 느꼈습니다.
               삼성증권 부장님과 농담을 주고 받으며 프로젝트 마감일까지 함께 고생했던 일, 장애가 발생했으니 지원을 요청하는 메일이 한꺼번에 5통이 와도 마무리 후
-              수고했다는 팀장님의 한마디면 즐거웠던 일이 생각났습니다. 그때 깨달았습니다. 내가 정말 잘 하는 일은 개발이구나.
+              수고했다는 팀장님의 한마디면 보람찼던 일이 생각났습니다. 그때 깨달았습니다. 내가 정말 잘 하는 일은 개발이구나.
 
               <br><br></p>
 
               <b style="font-family: 'SendBox font medium'">지금은 개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하고 있습니다.</b><br>
-              저는 개인 프로젝트, 검색엔진, 데이터 엔지니어 등의 경험으로 Spring MVC, Java, Python, Linux, SQL은<br>
-              이미 익숙해져 있기에 Spring Boot, Spring Security, JPA를 집중적으로 공부하였고 해당 기술스택을 사용한
-              프로젝트를 완성하였습니다.<br><br>
+              <p style="font-family: 'SendBox font light'">Spring Boot, Spring Security, Spring Data JPA, Thymeleaf, JWT를 집중적으로 공부하였고 해당 기술스택을 사용한
+                프로젝트를 완성하였습니다.<br><br></p>
 
           </div>
         </div>
@@ -118,40 +118,9 @@
           <p style="font-family: 'SendBox font medium'; letter-spacing: 5px; font-size: 16px">저는 지금 이것을 할 수 있습니다.</p>
         </div>
 
-        <div class="col-md-12" data-aos="fade-up">
-          <p class="mt-3" style="font-family: 'SendBox font light'">저는 한국폴리텍대학교I 강서캠퍼스 데이터분석과를 졸업했습니다.
-            폴리텍대학교 특성상 시간표는 매일 8교시로 꽉 차 있었습니다.<br>덕분에 4년동안 배울 컴퓨터과학 과목을
-            2년이내로 다 배울 수 있었습니다.<br> 잊은 것도 있고 부족하지만 <b style="font-family: 'SendBox font medium'">네트워크, 데이터베이스, 운영체제, 알고리즘,
-              자료구조, 컴퓨터구조, 프로젝트 실습 등 과목에서 전체학점 4점을 받았습니다.</b><br> 오후 5시에 강의가 끝나도 뜻이
-            맞는 학과 동기들끼리 남아서 과제학습, 알고리즘 풀이, Spring MVC 등을 밤 10시까지 공부하였습니다.<br>
-            그 결과 성실성을 인정받아 교수님의 추천으로 조기취업을 했습니다.</p>
-
-          <p style="font-family: 'SendBox font light'">
-            프로젝트 실습과목에서 Spring MVC, Mybatis, BootStrap5, Flask, Redis, MongoDB 등을
-            공부하여 프로젝트 3개를 진행했으며<br><b style="font-family: 'SendBox font medium'">혼자서 처음부터 끝까지 CRUD, 페이징 처리, 채팅기능, 인증,
-            세션, 등을 구현할 수 있습니다.</b>
-          </p>
-        </div>
-
-        <div class="col-md-12 mt-5" data-aos="fade-up">
-          <p style="font-family: 'SendBox font light'">
-            현재는 <b style="font-family: 'SendBox font medium'">Spring 핵심원리(DI, IOC, Solid, AOP), Spring JPA Data, Spring Security, JWT 등을 학습하고,
-            프로젝트를 완료했습니다.</b><br> 빠르게 기능을 구현하고 잘 모르는 부분은 기술부채로 남겨두었습니다.<br>이후 기술부채를 공부할 때는
-            코드로 친숙해진 상태이기에 더욱 재밌게 공부했습니다.
-          </p>
-
-          <p class="mb-5" style="font-family: 'SendBox font light'">
-            최근에는 실시간 데이터 스트리밍을 구현해보고 싶어서 오픈서치 대시보드로 모니터링 시스템을 구현했습니다.<br>
-            <b style="font-family: 'SendBox font medium'">Spring Boot → WebClient → Kafka → Logstash → OpenSearch 데이터 파이프라인</b>을
-            구축하였고<br>실시간으로 웹 앱에서 발생한 <b style="font-family: 'SendBox font medium'">네트워크 로그가 OpenSearch Dash board에 업데이트 되도록 구현했습니다.</b>
-          </p>
-        </div>
-
-
 
         <div class="bg-gray-900 text-white row">
         <div class="container mx-auto p-8">
-          <h1 class="text-2xl font-bold mb-4">보유 스킬</h1>
           <div class="grid grid-cols-2 gap-4">
             <div class="bg-white text-black p-4 rounded shadow">
               <h2 class="text-xl font-bold mb-2">Back-End</h2>
@@ -328,8 +297,8 @@
                 <div class="hexagon yellow">
                   <i class="fa-solid fa-briefcase"></i>
                 </div>
-                <h5 class="card-title mt-3">비즈니스 관점</h5>
-                <p class="card-text">사람들이 원하는 것이 무엇인지 내가 무엇을 줄 수 있는지 자주 고민하고 기록합니다.</p>
+                <h5 class="card-title mt-3">남성 스타일링 코칭</h5>
+                <p class="card-text">회사 동료들의 외모를 최적화 하여 성공적인 연애를 도와줄 수 있습니다.</p>
               </div>
             </div>
           </div>
@@ -346,7 +315,7 @@
           <h2 style="font-family: 'SendBox font bold'" data-aos="fade-up">CAREER</h2>
         </div>
         <div class="row">
-          <div class="col-lg-12" data-aos="fade-up">
+          <div class="col-lg-10" data-aos="fade-up">
             <h3 class="resume-title">SNS 컨텐츠 채널운영</h3>
             <div class="resume-item pb-0">
               <h4>2023.09 ~ 2024.03</h4>
@@ -368,7 +337,7 @@
             <h3 class="resume-title">인사이드정보 : 검색엔진 엔지니어</h3>
             <div class="resume-item">
               <h4>2021.09 ~ 2023.02</h4>
-              <p style="font-family: 'BM Dohyeon'">JAVA, C, ShellScript, ElasticSearch 등을 사용하여 검색엔진 개발과 이슈를 해결하고, 고객사의 도메인에 알맞는 형태소 분석, 검색 알고리즘을 적용하여 검색성능을 최적화 했습니다.</p>
+              <p style="font-family: 'BM Dohyeon'">검색엔진 솔루션(Nexten) 기술지원 및 엔지니어링 업무를 담당했습니다. C, C++로 개발된 검색엔진과 Java로 개발된 수집기의 연동, 고객사 맞춤 커스터마이징, 트러블 슈팅 업무를 담당했습니다.</p>
             </div>
           </div>
         </div>
@@ -449,7 +418,7 @@
               <div class="card-horizontal">
                 <div class="card-body">
                   <h5 class="card-title">개발 블로그</h5>
-                  <p class="card-text">백엔드 개발을하면서 겪은 문제, 배운점, 기술적 이해를 문서화하고 있습니다.</p>
+                  <p class="card-text">백엔드 개발을하면서 겪은 문제, 기술적 이해를 문서화하고 있습니다.</p>
                   <p><small class="text-muted">Since 2021.01 | 개발 블로그 운영</small></p>
                   <a href="https://weight-devlog.tistory.com/" target="_blank"><div class="btn btn-primary">방문하기</div></a>
                 </div>
@@ -486,7 +455,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p style="font-family: 'BM Hanna Pro'">서울특별시 강서구 개화동로 47</p>
+                <p style="font-family: 'BM Hanna Pro'">서울특별시 강서구</p>
               </div>
 
               <div class="email">
