--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: orangered">Creative Youtuber</h3>
-                      <div>유튜브가 어려운 사람들을 위한 유튜브 시작 가이드 웹 애플리케이션 벤치마킹 영상을 찾아주고 영상에 들어갈 참고자료까지 찾아준다.</div>
-                      <a href="https://creativeyoutuber.store" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://github.com/ChoiYoungHa/creative-youtuber.git" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
+                      <div>Spring Boot, Spring Security, JWT, JPA, Thymeleaf를 적용하고 학습하기 위해 제작한 프로젝트입니다.</div>
+                      <a href="https://pdflink.to/f8e64e86/" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://creativeyoutuber.store" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
                 </div>
@@ -196,9 +196,8 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: darkviolet">Work out</h3>
-                      <div>개인의 식단을 관리할 수 있도록 도와주며 운동자세가 올바르면 개수를 세어줍니다. 또한 커뮤니티를 통해 운동정보를 공유할 수 있습니다.</div>
+                      <div>Spring MVC, Mybatis, JSP, Redis, Rest API, Jquery를 학습한 후 제작한 대학교 졸업작품 입니다.</div>
                       <a href="https://www.youtube.com/watch?v=PJl0Q-T9dbU&t=110s" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://github.com/ChoiYoungHa/WorkOut" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
                 </div>
@@ -214,9 +213,8 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: yellowgreen">크립토 시그널</h3>
-                      <div>상대강도지수 RSI가 30이거나 70일 때 알람을 주는 웹 애플리케이션 시장분석을 위해 크립토 뉴스를 크롤링하고, 오피니언마이닝으로 긍정뉴스, 부정뉴스를 확인할 수 있게한다.</div>
+                      <div>Spring MVC, MyBatis, JSP, Jquery, MongoDB, 오피니언마이닝, 크롤링, Pandas, Numpy 기술을 적용한 프로젝트입니다. 팀장 역할을 맡았으며 팀원들은 동영상 제작, 기술설명 자료를 구성해주고 모든 개발은 혼자 하였습니다.</div>
                       <a href="https://youtu.be/xsCabkQBIGY?si=3qG61bdDCZpHK1Zo" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://github.com/ChoiYoungHa/CryptoSignal" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
                 </div>
@@ -228,9 +226,8 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: #e8a702">Diet Helper</h3>
-                      <div>개인의 감량 목표와 기초대사량에 알맞게 클린식단 및 간식을 추천해주는 웹 애플리케이션</div>
+                      <div>Spring MVC, MyBatis, JSP, Rest API, Oracle DB 기술을 적용한 팀프로젝트 입니다. 팀장 역할을 맡았으며 식단추천 기능, 회원가입을 구현하였습니다.</div>
                       <a href="https://www.youtube.com/watch?v=ZYtlykQZcrI&t=52s" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://github.com/ChoiYoungHa/DietHelperTeam" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
                     </div>
                   </div>
                 </div>
@@ -238,23 +235,6 @@
             </div>
           </div>
 
-          <div ><h3 style="font-family: 'SendBox font bold'">데이터 엔지니어링</h3></div>
-          <div class="container py-1" data-aos="fade-up">
-            <div class="row">
-              <div class="col-md-6 mb-4">
-                <div class="project-card">
-                  <img src="assets/img/dashboard.png" alt="네트워크 모니터링" class="img-fluid">
-                  <div class="project-info">
-                    <div class="project-content">
-                      <h3 style="color: #1967d4">실시간 네트워크 모니터링</h3>
-                      <div>웹 앱에서 발생한 네트워크 로그를 실시간으로 대시보드에 반영합니다.</div>
-                      <a href="https://future-zydeco-6c6.notion.site/670305a47f6846c7a7bff0e1914720ea?pvs=4" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="col-11" style="background-color: #0a58ca; text-align: center; color: white; margin-left: 50px">앞으로 더 많은 프로젝트가 추가될 예정입니다 :)</div>
