--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                       <h3 style="color: yellowgreen">크립토 시그널</h3>
                       <h3 style="color: yellowgreen">2022.09 ~ 2022.10</h3>
                       <div>Spring MVC, MyBatis, JSP, Jquery, MongoDB, 오피니언마이닝, 크롤링, Pandas, Numpy 기술을 적용한 프로젝트입니다. 팀장 역할을 맡았으며 팀원들은 동영상 제작, 기술설명 자료를 구성해주고 모든 개발은 혼자 하였습니다.</div>
-                      <a href="https://youtu.be/xsCabkQBIGY?si=3qG61bdDCZpHK1Zo" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://youtu.be/xsCabkQBIGY?si=3qG61bdDCZpHK1Zo" target="_blank" class="btn btn-light btn-sm">시연 동영상</a>
                     </div>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
                       <h3 style="color: #e8a702">Diet Helper</h3>
                       <h3 style="color: #e8a702">2021.09 ~ 2021.10</h3>
                       <div>Spring MVC, MyBatis, JSP, Rest API, Oracle DB 기술을 적용한 팀프로젝트 입니다. 팀장 역할을 맡았으며 식단추천 기능, 회원가입을 구현하였습니다.</div>
-                      <a href="https://www.youtube.com/watch?v=ZYtlykQZcrI&t=52s" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://www.youtube.com/watch?v=ZYtlykQZcrI&t=52s" target="_blank" class="btn btn-light btn-sm">시연 동영상</a>
                     </div>
                   </div>
                 </div>
